--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
             <version>4.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>3.3.1</version>
+        </dependency>
     </dependencies>
 
     <build>
